🚀 Minor changes to deploy V1

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "yeelight-platform": "^1.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & node ./server.js",
     "dev": "react-scripts start & node ./server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
